--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -6,4 +6,4 @@
 add_executable(demo_benchmark demo_benchmark.cpp)
 
 # Примечание: Не забываем подключить (прилинковать) библиотеку ${PROJECT_NAME} с реализацией структуры данных.
-target_link_libraries(demo_benchmark PRIVATE project_paths project_warnings ${PROJECT_NAME})
+target_link_libraries(demo_benchmark PRIVATE project_paths project_warnings semester_work_template_b_tree_11_004)
