--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -3,7 +3,11 @@
 
 # Пример создания контрольного теста (исполняемого файла) под названием demo_benchmark.
 # Исходный код предоставлен в файле demo_benchmark.cpp текущей директории.
-add_executable(demo_benchmark demo_benchmark.cpp)
+add_executable(insert_benchmark insert_benchmark.cpp)
+add_executable(find_benchmark find_benchmark.cpp)
+add_executable(remove_benchmark remove_benchmark.cpp)
 
 # Примечание: Не забываем подключить (прилинковать) библиотеку ${PROJECT_NAME} с реализацией структуры данных.
-target_link_libraries(demo_benchmark PRIVATE project_paths project_warnings semester_work_template_b_tree_11_004)
+target_link_libraries(insert_benchmark PRIVATE project_paths project_warnings ${PROJECT_NAME})
+target_link_libraries(find_benchmark PRIVATE project_paths project_warnings ${PROJECT_NAME})
+target_link_libraries(remove_benchmark PRIVATE project_paths project_warnings ${PROJECT_NAME})
